Projects Tab Switching added v1
The programming or engineering tabs now move to center screen when hovered over and scrolled. The next commit should feature them expanding to cover the screen, and the following commit should have relevant pictures and information.

--- a/Projects.html
+++ b/Projects.html
@@ -5,7 +5,10 @@
     <script src="jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
     <meta charset="utf-8" />
-    <title>Title</title>
+
+
+
+    <title>My Projects</title>
 
     <div id="headerBox">
         <div class="headerItems">
@@ -19,7 +22,6 @@
         </div>
     </div>
 
-
 </head>
 <body>
     <div id="body2">
@@ -29,15 +31,16 @@
 
 
 
+        <div class="projectItem">
+            My interests lie in two categories, engineering and programming. Here you can see some of the things I have made,
+            ranging from a potato cannon to an Android application.
+        </div>
 
-        <div id="introduction">
-            <div id="introduction1">
-                Hi and welcome to my personal webpage!
-            </div>
-            <div id="introduction2">
-                This is a website that I created to display projects that I have worked on in the past to present information about myself
-                in a professional manner.
-            </div>
+        <div>
+
+            <div id="engineeringProjects"> potato cannon </div>
+            <div id="programmingProjects"> Android App   </div>
+
         </div>
 
 
