--- a/About Me.html
+++ b/About Me.html
@@ -4,8 +4,10 @@
     <link rel="stylesheet" href="Styles2.css">
     <script src="jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
+
     <meta charset="utf-8" />
-    <title>Title</title>
+    
+    <title>Zachary Schweikert</title>
 
     <div id="headerBox">
         <div class="headerItems">
@@ -19,27 +21,12 @@
         </div>
     </div>
 
-
 </head>
 <body>
     <div id="body2">
         <script>
             $("#body2").fadeIn(500)
         </script>
-
-
-
-
-        <div id="introduction">
-            <div id="introduction1">
-                Hi and welcome to my personal webpage!
-            </div>
-            <div id="introduction2">
-                This is a website that I created to display projects that I have worked on in the past to present information about myself
-                in a professional manner.
-            </div>
-        </div>
-
 
     </div>
 </body>
