Huge progress made
A contact page utilizing PHP has been mostly set up. The projects page has information on it now. The about me page has information but no pictures yet.

--- a/Projects.html
+++ b/Projects.html
@@ -10,15 +10,18 @@
 
     <title>My Projects</title>
 
+    
+
+
     <div id="headerBox">
         <div class="headerItems">
-            <a href="index.html">Home</a>
+            <a href="About Me.html">About me</a>
         </div>
         <div class="headerItems">
             <a href="Projects.html">Projects</a>
         </div>
         <div class="headerItems">
-            <a href="About Me.html">About Me</a>
+            <a href="Contact.html">Contact</a>
         </div>
     </div>
 
@@ -33,13 +36,159 @@
 
         <div class="projectItem">
             My interests lie in two categories, engineering and programming. Here you can see some of the things I have made,
-            ranging from a potato cannon to an Android application.
+            ranging from a potato cannon to an Android application. (Hover the mouse over a side and scroll to see more)
         </div>
 
         <div>
 
-            <div id="engineeringProjects"> potato cannon </div>
-            <div id="programmingProjects"> Android App   </div>
+            <div id="engineeringProjects">
+
+                <div class="items bigBulletItem">
+                    Check out some of my engineering projects!
+                </div>
+
+                <div class="items">
+                    <div class="mediumBulletItem">
+                        3D Printed Marble Launcher!
+                    </div>
+                    <div class="bulletItem">
+                        For our final project in my Electrical Engineering 286 "EE DESIGN: <br />
+                        THE PROCESS class, we designed and built a handheld, 3D printed <br />
+                        dvice to launch marbles and also utilized two motors, 6 LEDs, an <br />
+                        IR receiver, and a light sensor. The first thing we did after <br />
+                        using a decision matrix to decide on this project, was make a <br />
+                        model of what we wanted using things like paper or cardboard. <br />
+                        <img style="width: 49%" src="Images/Engineering Projects/Marble Launcher/paper.jpg" />
+                        <img style="width: 49%" src="Images/Engineering Projects/Marble Launcher/cardboard.jpg" />
+                    </div>
+                </div>
+
+                <div class="items">
+                    <div class="mediumBulletItem">
+                        Analog to Digital Converter (using Arduino!)
+                    </div>
+                    <div class="bulletItem">
+                        Utilizing about 11 resistors, my team of 4 was able to measure up to <br />
+                        10V from an external source. We started by making a Gantt Chart to <br />
+                        keep our team on track.<br />
+                        <img class="image" src="Images/Engineering Projects/AtoD converter/project 2 gantt chart.png" />
+                        <div class="bulletItem">
+                            Figure 1: The Gantt Chart we made and utilized to keep our group on track.
+                        </div>
+                        After that, we utilized the design process and decision matricies <br />
+                        to determine what type of converter we would make. We decided on <br />
+                        making a flash ADC and our schematic is shown below.<br />
+                        <img class="image" src="Images/Engineering Projects/AtoD converter/p2 schematic.PNG" />
+                        <div class="bulletItem">
+                            Figure 2: The schmatic depicting our Analog to Digital converter our group designed.
+                        </div>
+                        The final result is that our design worked successfully when our op- <br />
+                        amps were supplied with a sufficient Vcc.
+                    </div>
+                </div>
+
+                <div class="items">
+                    <div class="mediumBulletItem">
+                        Temperature Reader using the LM35
+                    </div>
+                    <div class="bulletItem">
+                        Using an Arduino, the LM35 temperature reading chip, and an LCD, <br />
+                        my team and I were able to measure temperatures ranging between <br />
+                        -10 to 150 degrees Fahrenheit. We tacked on 8 LEDs for aesthetic. <br />
+                        <img class="image" src="Images/Engineering Projects/Temp reader/Schematic.png" />
+                        <div class="bulletItem">
+                            Figure 1: The schematic for our temperature sensor.
+                        </div>
+                        Shown above is the schematic for our temperature sensor. This <br />
+                        was the first project we did in this class and for most of us, <br />
+                        the first EE project we have really ever done. Our schematic and <br />
+                        design was not the most organized then, but they have gotten <br />
+                        significantly better over the course of the semester.
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div id="programmingProjects">
+
+
+
+                <div class="items bigBulletItem">
+                    Look at some of my programming projects!
+                </div>
+
+                <div class="items">
+                    <div class="mediumBulletItem">
+                        Location Reminders (Android App)
+                    </div>
+                    <div class="bulletItem">
+                        <div style="margin: auto; width: 10%" >
+
+                        <img class="image" src="Images/Programming Projects/Location Reminders/globeicon.png" /> 
+                        </div>
+                        Location Reminders is an application that I developed for Android as a <br />
+                        summer project. This project was not for a class, was not suggested by <br />
+                        anyone, and was only worked on by me in a little over one summer for <br />
+                        a couple hours per day. <br />
+                        This application allows the user to set a reminder for themselves to be<br />
+                        activated when they reach a location. Ex, "The next time that I go to  <br />
+                        Subway, remind me that I have a gift card for there." <br />
+                        It utilizes a SQLite database to save the information and checks less <br />
+                        frequently if the user is farther away to save battery and processing <br />
+                        power. It can be found at GitHub.com/zac216.
+
+                    </div>
+                </div>
+
+                <div class="items">
+                    <div class="mediumBulletItem">
+                        This Website
+                    </div>
+                    <div class="bulletItem">
+                        
+                        This website was built to be an online portfolio of my past projects <br />
+                        that I could show off to future employers. This website shows the <br />
+                        diverse amount of things that I have knowledge of and I even created <br />
+                        this website from scratch to show my HTML prowess. I developed this <br />
+                        website using Visual Studio and although it does not do many fancy <br />
+                        network things, I do understand how to use PHP and mySQL as well.
+                    </div>
+                </div>
+
+                <div class="items">
+                    <div class="mediumBulletItem">
+                        Miscellaneous
+                    </div>
+                    <div class="bulletItem">
+
+                        I have also completed numerous small tasks for various programming <br />
+                        classes using several programming languages. I have taken classes <br />
+                        in HTML/CSS/JavaScript/PHP, Visual Basic, C#, MATLAB, Python, <br />
+                        assembly, and C (in that order). I have created bubble sorts and <br />
+                        binary sorts in C and assembly, a small fighting game in C#, a <br />
+                        shopping website in PHP, and Arduino code to read temperatures from <br />
+                        a thermistor to name a few, notable, small programming things.
+                    </div>
+                </div>
+
+                <div class="items">
+                    <div class="mediumBulletItem">
+                        Nearest Neighbor Algorithm Calculator
+                    </div>
+                    <div class="bulletItem">
+
+                        For my Discrete Mathmatics class (MAT 226), I created a program to <br />
+                        find the nearest neighbor path and length given an edge set. The <br />
+                        code is about 300 lines long and was written in C#. An example of <br />
+                        when this program would be useful would be if you wanted to take a <br />
+                        road trip and visit several cities along the way while taking the <br />
+                        shortest and most efficient route. 
+
+                    </div>
+                </div>
+
+            </div>
 
         </div>
 
