--- a/Projects.html
+++ b/Projects.html
@@ -150,9 +150,9 @@
                         This website was built to be an online portfolio of my past projects <br />
                         that I could show off to future employers. This website shows the <br />
                         diverse amount of things that I have knowledge of and I even created <br />
-                        this website from scratch to show my HTML prowess. I developed this <br />
-                        website using Visual Studio and although it does not do many fancy <br />
-                        network things, I do understand how to use PHP and mySQL as well.
+                        this website from (almost) scratch to show my HTML prowess. I <br />
+                        developed this website using Visual Studio and although it does not do <br />
+                        many complex things, I understand PHP and mySQL as well.
                     </div>
                 </div>
 
